Add AWSCore as a public build dependency for the AWSMetrics target
Signed-off-by: Junbo Liang <68558268+junbo75@users.noreply.github.com>

--- a/Gems/AWSMetrics/Code/CMakeLists.txt
+++ b/Gems/AWSMetrics/Code/CMakeLists.txt
@@ -36,6 +36,8 @@ ly_add_target(
         PRIVATE
             Source
     BUILD_DEPENDENCIES
+        PUBLIC
+            Gem::AWSCore
         PRIVATE
             AZ::AzCore
             AZ::AzFramework
