Added a new AtomImGuiToolsBus that's used to open the material shader details tool. It doesn't quite work yet but I need to commit these changes and then merge some other stuff before continued testing.
Signed-off-by: santorac <55155825+santorac@users.noreply.github.com>

--- a/Gems/AtomLyIntegration/CommonFeatures/Code/CMakeLists.txt
+++ b/Gems/AtomLyIntegration/CommonFeatures/Code/CMakeLists.txt
@@ -102,6 +102,7 @@ if(PAL_TRAIT_BUILD_HOST_TOOLS)
                 Gem::Atom_RPI.Edit
                 Gem::AtomToolsFramework.Static
                 Gem::AtomToolsFramework.Editor
+                Gem::AtomImGuiTools.Public
                 AZ::SceneCore
                 AZ::SceneData
                 Legacy::Editor.Headers
