Fix onnx gem and add onnx inferencing in motion matching instance.
Signed-off-by: Kuba Ciukiewicz <108667365+kubciu@users.noreply.github.com>

--- a/Gems/MotionMatching/Code/CMakeLists.txt
+++ b/Gems/MotionMatching/Code/CMakeLists.txt
@@ -23,6 +23,7 @@ ly_add_target(
             AZ::AzFramework
             Gem::EMotionFXStaticLib
             Gem::ImguiAtom.Static
+            ONNX.Private.Object
 )
 
 # Here add MotionMatching target, it depends on the MotionMatching.Static
