Added janky support for image saving.
Signed-off-by: Mike Balfour <82224783+mbalfour-amzn@users.noreply.github.com>

--- a/Gems/Terrain/Code/CMakeLists.txt
+++ b/Gems/Terrain/Code/CMakeLists.txt
@@ -26,6 +26,7 @@ ly_add_target(
             Gem::GradientSignal
             Gem::SurfaceData
             Gem::LmbrCentral
+            3rdParty::OpenImageIO
         PRIVATE
             Gem::AWSCore
             Gem::HttpRequestor
